--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-$bg-main: #425cee;
+$bg-main: #b991b5;
 $bg-light: #e2d6f8;
 $bg-gray: #bebebe;
 $txt-main: #fffdcc;
