--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -42,7 +42,7 @@
 
                 img {
                     max-height: 300px;
-                    min-width: 300px;
+                    width: 100%;
                 }
             }
 
@@ -51,14 +51,15 @@
                 background-color: $bg-light;
 
                 @media (min-width: 800px) {
-                    min-width: 300px;
+                    min-width: 200px;
                     border-top-right-radius: 20px;
                     border-bottom-right-radius: 20px;
                 }
 
+                .formContainer {
+                    padding: 50px;
+                }
                 form {
-                    padding: 20px;
-
                     .title {
                         color: black;
                         font-size: 1.25rem;
@@ -124,12 +125,13 @@
                     .formButton {
                         display: flex;
                         height: 2.5rem;
-                        width: 80%;
+                        width: 100%;
                         align-items: center;
                         justify-content: center;
                         border-radius: 0.375rem;
                         border: 1px solid black;
                         font-size: 0.875rem;
+                        font-family: 'Montserrat', sans-serif;
                         transition: all 0.2s ease-in-out;
                         outline: none;
                         background-color: black;
@@ -156,7 +158,7 @@
                     }
 
                     .fullWidth {
-                        width: 80%;
+                        width: 100%;
                     }
 
                     .loading {
